--- a/invoice_parser.ipynb
+++ b/invoice_parser.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "d2m1zdPNSaeQ"
       },
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "8HD4YdL4HQys",
         "colab": {
@@ -180,7 +180,7 @@
         "id": "UXcIq4EuoDMO",
         "outputId": "9145e1c6-980f-469f-d764-6529675febf3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +219,7 @@
         "id": "6NXFlNtIq5BO",
         "outputId": "27aa8c88-3148-493f-937c-724e111670ee"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,7 +614,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "if 'df' in locals() and not df.empty:\n",
+        "    # Save the line items DataFrame to CSV\n",
+        "    df.to_csv('invoice_items.csv', index=False)\n",
+        "\n",
+        "    # Save the summary data\n",
+        "    summary_df = pd.DataFrame([parsed_data])\n",
+        "    summary_df.to_csv('invoice_summary.csv', index=False)\n",
+        "\n",
+        "    print(\"✅ Successfully saved data to invoice_summary.csv and invoice_items.csv\")\n"
+      ],
       "metadata": {
         "id": "AtjdKaAfq7SV"
       },
@@ -627,7 +637,7 @@
     "colab": {
       "gpuType": "T4",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzdDORfFgd9z2LgoJDRBxd",
+      "authorship_tag": "ABX9TyOT6NzJNyF7twpGuM2ZDVG/",
       "include_colab_link": true
     },
     "kernelspec": {
